--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,6 @@
               <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
               <li class="title">DOWNLOADS</li>
             {% endif %}
-            {% include navigation.html %}
           </ul>
         </nav>
       </div><!-- end header -->
@@ -38,7 +37,7 @@
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
-          <!-- {% include navigation.html %} -->
+          <span>{% include navigation.html %}</span>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
